svc.yml
# A service is an abstraction for pods, providing a stable, virtual IP (VIP) address.
kind: Service
apiVersion: v1
metadata:
  name: rpi-lnp-service
spec:
  # nodePort is the port that a client outside of the cluster will "see".
  # nodePort is opened on every node in your cluster.
  # type: NodePort
  ports:
    - port: 80
      name: http
  selector:
    app: rpi-lnp
