ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rpi-lnp-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: rpi-lnp-service
          servicePort: 80
